# Astrocore

./: .gitignore  CMakeLists.txt  README.md  _CMakeLists.txt  d  main.cpp
AstroCore/: CMakeLists.txt  README.md  animatedSpriteEntity.cpp  animatedSpriteEntity.h  astrocore.h  entity.cpp  entity.h  file.h  game.h  input.cpp  input.h  spriteEntity.cpp  spriteEntity.h  structs.h
AstroCore/data/: interfaces.h  structs.h
AstroCore/engine/: collisionTracker.cpp  collisionTracker.h  debug.h  entityScene.h  file.h  filemanager.cpp  filemanager.h  game.h  input.cpp  input.h  physicsDebug.cpp  physicsDebug.h  raycast.h  scene.cpp  scene.h  singletons.h  texturemanager.cpp  texturemanager.h
AstroCore/entities/baseEntities/: animatedSpriteEntity.cpp  animatedSpriteEntity.h  cameraEntity.h  cameraEntityBase.h  entity.cpp  entity.h  light2D.cpp  light2D.h  pixelPerfectCamera.h  shapeEntity.cpp  shapeEntity.h  spriteEntity.cpp  spriteEntity.h  stackedSpriteEntity.cpp  stackedSpriteEntity.h  tilemap.cpp  tilemap.h  tilemapLayer.cpp  tilemapLayer.h  vectorShapeEntity.h
AstroCore/entities/physicsEntities/: collisionEntity.h  physicsEntity.cpp  physicsEntity.h  trigger2D.cpp  trigger2D.h
AstroCore/header/: animatedSpriteEntity.h  cameraEntity.h  cameraEntityBase.h  collisionEntity.h  collisionTracker.h  debug.h  entity.h  file.h  filemanager.h  game.h  input.h  interfaces.h  light2D.h  physicsDebug.h  physicsEntity.h  pixelPerfectCamera.h  scene.h  singletons.h  spriteEntity.h  structs.h  texturemanager.h  tilemap.h  tilemapLayer.h  tilemaplayer.h  trigger2D.h
AstroCore/src/: animatedSpriteEntity.cpp  collisionTracker.cpp  entity.cpp  filemanager.cpp  input.cpp  light2D.cpp  physicsDebug.cpp  physicsEntity.cpp  scene.cpp  spriteEntity.cpp  texturemanager.cpp  tilemap.cpp  tilemapLayer.cpp  trigger2D.cpp
EngineCore/: input.cpp  input.h
header/: game.h  physicsScene.h  testGame.h  testScene.h
res/: test.txt
src/: game.cpp
